mavensmate/Fabrication/deploy/kalho13@gmail.com/2014-05-14 14:38:41/unpackaged/objects/Job_Part_QA_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <picklist>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fabrication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issue_Found__c</fullName>
        <label>Issue Found</label>
        <picklist>
            <controllingField>Group__c</controllingField>
            <picklistValues>
                <fullName>Placement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weld</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thin Paint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paint Runs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damaged in Transit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prints</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Problem</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_PartLU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Part</label>
        <referenceTo>Job_Part__c</referenceTo>
        <relationshipLabel>Job Part QA Details (Job Part)</relationshipLabel>
        <relationshipName>Job_Part_QA_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <label>Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Job Part QA Details</relationshipLabel>
        <relationshipName>Job_Part_QA_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Problem_Quantity__c</fullName>
        <label>Problem Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Job Part QA Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QAD-{000000}</displayFormat>
        <label>Job Part QA Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Part QA Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>